# simple-rag

./: .env.example  .env.staging  .gitignore  LICENSE  README.md  context.md  docker-compose.yml
.agents/: AGENTS.md
.github/workflows/: deploy-api.yml  deploy-chunker.yml  deploy-indexer.yml
apps/api/: Dockerfile  config.go  go.mod  go.sum  main.go  seed.sh
apps/chunker/: .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt  utils.py
apps/chunker/parsers/: base.py  markdown.py  pdf.py  txt.py
apps/chunker/src/: __init__.py  config.py  core.py  hybrid_splitter.py  main.py  messaging.py  parser.py  storage.py
apps/chunker/tests/: __init__.py  conftest.py  test_core.py  test_hybrid_splitter.py  test_main.py  test_messaging.py  test_parser.py  test_storage.py
apps/indexer/: Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt  test_indexer.py  v2-example.py  vector.py
apps/indexer/src/: __init__.py  config.py  haystack_pipeline.py  main.py  vector.py
apps/indexer/tests/: __init__.py  test_indexer.py
deploy/k8s/: apps-applicationset.yaml  argocd-image-updater.yaml
deploy/local/: elasticmq.conf
docs/: architecture.md  contracts.md  ops.md
docs/adr/: 0001-record-architecture-decisions.md  0001-system-boundaries.md  0002-system-boundaries.md  0002-vector-storage.md  0003-embedding-model.md  0003-sqs-payload.md  0003-sqs-payloads.md  0004-ai-pipeline-framework.md  0004-sqs-payload.md  0005-embedding-model.md  (+9 more)
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  variables.tf
(+82 files in other folders)
