[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chunker"
version = "0.1.0"
description = "Stage 1: Ephemeral parsing and chunking job for simple-rag"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "haystack-ai>=2.0.0",
    "boto3>=1.28.0",
    "pymupdf>=1.22.0",
    "urllib3>=1.26.0",
    "nltk>=3.9.1",
    "transformers>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.6.0"
]

[project.scripts]
chunker = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
